Corrected the padding in the footer and header

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -33,6 +33,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5px;
 }
 
 img {
@@ -60,6 +61,7 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 5px;
 }
 
 .content {
